--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
       text-decoration: underline;
     }
 
+    .card.hotel {
+      background: #2a9d8f;
+      color: white;
+      box-shadow: 0 4px 10px rgba(42, 157, 143, 0.5);
+    }
+
     @media (max-width: 480px) {
       .container {
         padding: 20px 15px;
@@ -105,9 +111,9 @@
   <div class="container">
     <h1>🧳 Batam Trip Itinerary</h1>
     <p style="text-align:center; font-weight:600; color:#264653; margin-top:-10px;">October 19–20, 2025</p>
-
+    
     <h2>🏨 Hotel Details</h2>
-    <div class="card">
+    <div class="card hotel">
       <p><strong>iHotel Batam</strong><br />Jl. Teuku Umar, Lubuk Baja Kota, Kec. Lubuk Baja, Kota Batam</p>
       <p><strong>Check-in:</strong> Oct 19, 2:00 PM<br /><strong>Check-out:</strong> Oct 20, 12:00 PM</p>
     </div>
@@ -207,3 +213,4 @@
 
 </body>
 </html>
+
