--- a/index.html
+++ b/index.html
@@ -1,216 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Batam Trip Itinerary - Oct 19–20, 2025</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Batam Trip Itinerary - Oct 19–20, 2025</title>
+<style>
+  /* Reset & base */
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background: #f0f4f8;
+    color: #333;
+    margin: 0;
+    padding: 20px;
+  }
 
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #fffaf0;
-      color: #2c3e50;
-      margin: 0;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-    }
+  .container {
+    max-width: 600px;
+    margin: 0 auto;
+    background: white;
+    border-radius: 8px;
+    padding: 30px 25px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  }
 
+  h1 {
+    text-align: center;
+    font-weight: 700;
+    color: #2c3e50;
+    margin-bottom: 5px;
+  }
+
+  p.subtitle {
+    text-align: center;
+    font-weight: 500;
+    color: #7f8c8d;
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+
+  /* Timeline container */
+  .timeline {
+    position: relative;
+    padding-left: 30px;
+    border-left: 3px solid #3498db;
+  }
+
+  /* Each event */
+  .event {
+    position: relative;
+    margin-bottom: 30px;
+    padding-left: 20px;
+  }
+
+  .event:last-child {
+    margin-bottom: 0;
+  }
+
+  /* Dot on timeline */
+  .event::before {
+    content: "";
+    position: absolute;
+    left: -12px;
+    top: 5px;
+    width: 18px;
+    height: 18px;
+    background: #3498db;
+    border-radius: 50%;
+    border: 3px solid white;
+    box-shadow: 0 0 6px rgba(52,152,219,0.7);
+  }
+
+  .event-time {
+    font-weight: 700;
+    color: #2980b9;
+    margin-bottom: 5px;
+    font-size: 1rem;
+  }
+
+  .event-title {
+    font-weight: 600;
+    font-size: 1.1rem;
+    margin: 0 0 5px 0;
+  }
+
+  .event-details {
+    font-size: 0.9rem;
+    color: #555;
+  }
+
+  /* Sections */
+  section {
+    margin-bottom: 40px;
+  }
+
+  /* Hotel card */
+  .hotel-card {
+    background: #2ecc71;
+    color: white;
+    padding: 20px 25px;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(46,204,113,0.4);
+  }
+
+  .hotel-card p {
+    margin: 5px 0;
+    font-weight: 600;
+  }
+
+  /* Reminders list */
+  ul.reminders {
+    padding-left: 20px;
+    color: #34495e;
+  }
+
+  ul.reminders li {
+    margin-bottom: 10px;
+    font-weight: 500;
+  }
+
+  a.link {
+    color: #2980b9;
+    text-decoration: none;
+    font-weight: 600;
+  }
+  a.link:hover {
+    text-decoration: underline;
+  }
+
+  /* Responsive */
+  @media (max-width: 480px) {
     .container {
-      max-width: 700px;
-      width: 100%;
-      background: #ffffff;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-      border-radius: 12px;
-      padding: 30px 40px;
+      padding: 20px 15px;
     }
-
-    h1 {
-      text-align: center;
-      font-weight: 600;
-      color: #1d3557;
-      margin-bottom: 10px;
+    .event-time, .event-title {
+      font-size: 0.95rem;
     }
-
-    h2 {
-      border-bottom: 2px solid #f4a261;
-      padding-bottom: 6px;
-      color: #e76f51;
-      margin-top: 40px;
-      margin-bottom: 15px;
-    }
-
-    .card {
-      background: #f4a261;
-      border-radius: 10px;
-      padding: 18px 24px;
-      margin-bottom: 18px;
-      color: white;
-      box-shadow: 0 4px 10px rgba(244, 162, 97, 0.3);
-    }
-
-    .card.highlight {
-      background: #2a9d8f;
-      box-shadow: 0 4px 10px rgba(42, 157, 143, 0.5);
-    }
-
-    .time {
-      font-weight: 600;
-      font-size: 1.1em;
-      margin-bottom: 6px;
-      color: #264653;
-    }
-
-    .activity {
-      font-weight: 600;
-      font-size: 1.25em;
-      margin-bottom: 4px;
-    }
-
-    .notes {
-      font-style: italic;
-      font-size: 0.9em;
-      color: #264653cc;
-    }
-
-    ul.reminders {
-      padding-left: 18px;
-      margin-top: 0;
-      color: #264653;
-    }
-
-    ul.reminders li {
-      margin-bottom: 8px;
-    }
-
-    a.link {
-      color: #e76f51;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    a.link:hover {
-      text-decoration: underline;
-    }
-
-    .card.hotel {
-      background: #2a9d8f;
-      color: white;
-      box-shadow: 0 4px 10px rgba(42, 157, 143, 0.5);
-    }
-
-    @media (max-width: 480px) {
-      .container {
-        padding: 20px 15px;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-
   <div class="container">
-    <h1>🧳 Batam Trip Itinerary</h1>
-    <p style="text-align:center; font-weight:600; color:#264653; margin-top:-10px;">October 19–20, 2025</p>
-    
-    <h2>🏨 Hotel Details</h2>
-    <div class="card hotel">
-      <p><strong>iHotel Batam</strong><br />Jl. Teuku Umar, Lubuk Baja Kota, Kec. Lubuk Baja, Kota Batam</p>
-      <p><strong>Check-in:</strong> Oct 19, 2:00 PM<br /><strong>Check-out:</strong> Oct 20, 12:00 PM</p>
-    </div>
+    <h1>Batam Trip Itinerary</h1>
+    <p class="subtitle">October 19–20, 2025</p>
 
-    <h2>📅 Day 1: Saturday, Oct 19</h2>
+    <section>
+      <div class="hotel-card">
+        <p>🏨 <strong>iHotel Batam</strong></p>
+        <p>Jl. Teuku Umar, Lubuk Baja Kota, Kec. Lubuk Baja, Kota Batam</p>
+        <p>Check-in: Oct 19, 2:00 PM | Check-out: Oct 20, 12:00 PM</p>
+      </div>
+    </section>
 
-    <div class="card">
-      <div class="time">8:10 AM</div>
-      <div class="activity">Ferry to Batam</div>
-      <div class="notes">HarbourFront → Batam Centre (~1 hour)</div>
-    </div>
+    <section>
+      <h2 style="color:#3498db; margin-bottom:15px;">Day 1 - Saturday, Oct 19</h2>
+      <div class="timeline">
+        <div class="event">
+          <div class="event-time">8:10 AM</div>
+          <div class="event-title">Ferry to Batam</div>
+          <div class="event-details">HarbourFront → Batam Centre (~1 hour trip)</div>
+        </div>
+        <div class="event">
+          <div class="event-time">9:10 AM</div>
+          <div class="event-title">Arrive in Batam</div>
+          <div class="event-details">Immigration & luggage pickup</div>
+        </div>
+        <div class="event">
+          <div class="event-time">10:00 AM</div>
+          <div class="event-title">Breakfast</div>
+          <div class="event-details">Cafes at Nagoya Hill Mall</div>
+        </div>
+        <div class="event">
+          <div class="event-time">12:00 PM</div>
+          <div class="event-title">Lunch at <a href="https://goo.gl/maps/9zXb3WxrD6fxmZTi8" target="_blank" class="link">Sop Ikan 96</a></div>
+          <div class="event-details">Famous local fish soup</div>
+        </div>
+        <div class="event">
+          <div class="event-time">2:00 PM</div>
+          <div class="event-title">Hotel Check-in</div>
+          <div class="event-details">Settle in at iHotel Batam</div>
+        </div>
+        <div class="event" style="border-left-color:#27ae60;">
+          <div class="event-time" style="color:#27ae60;">4:00 PM</div>
+          <div class="event-title">Massage Appointment</div>
+          <div class="event-details">At Spa Central Batam (Baloi) / Tui Na Healthcare</div>
+        </div>
+        <div class="event">
+          <div class="event-time">6:00 PM</div>
+          <div class="event-title">Dinner</div>
+          <div class="event-details">Nagoya Hill Food Street</div>
+        </div>
+        <div class="event">
+          <div class="event-time">8:00 PM</div>
+          <div class="event-title">Evening at <a href="https://goo.gl/maps/WNfnq5cN9wJY7gwj7" target="_blank" class="link">Blue Fire Beach Club</a></div>
+          <div class="event-details">Chill out with drinks & music</div>
+        </div>
+      </div>
+    </section>
 
-    <div class="card">
-      <div class="time">9:10 AM</div>
-      <div class="activity">Arrive at Batam Centre</div>
-      <div class="notes">Immigration & luggage pickup</div>
-    </div>
+    <section>
+      <h2 style="color:#3498db; margin-bottom:15px;">Day 2 - Sunday, Oct 20</h2>
+      <div class="timeline">
+        <div class="event">
+          <div class="event-time">8:00 AM</div>
+          <div class="event-title">Breakfast at hotel</div>
+          <div class="event-details">Start your day fresh</div>
+        </div>
+        <div class="event">
+          <div class="event-time">10:00 AM</div>
+          <div class="event-title">Explore / Shopping</div>
+          <div class="event-details">Batam Mega Mall or BCS Mall</div>
+        </div>
+        <div class="event">
+          <div class="event-time">12:00 PM</div>
+          <div class="event-title">Hotel Check-out</div>
+          <div class="event-details">Leave luggage at reception if needed</div>
+        </div>
+        <div class="event">
+          <div class="event-time">1:00 PM</div>
+          <div class="event-title">Lunch (optional)</div>
+          <div class="event-details">Try local dishes or revisit favorites</div>
+        </div>
+        <div class="event">
+          <div class="event-time">4:45 PM</div>
+          <div class="event-title">Ferry back to Singapore</div>
+          <div class="event-details">Batam Centre → HarbourFront</div>
+        </div>
+      </div>
+    </section>
 
-    <div class="card">
-      <div class="time">10:00 AM</div>
-      <div class="activity">Light Breakfast</div>
-      <div class="notes">At Nagoya Hill mall cafes</div>
-    </div>
-
-    <div class="card">
-      <div class="time">12:00 PM</div>
-      <div class="activity">Lunch at <a href="https://goo.gl/maps/9zXb3WxrD6fxmZTi8" target="_blank" class="link">Sop Ikan 96</a></div>
-      <div class="notes">Famous fish soup, great local flavor</div>
-    </div>
-
-    <div class="card">
-      <div class="time">2:00 PM</div>
-      <div class="activity">Check-in at iHotel Batam</div>
-      <div class="notes">Settle in and rest</div>
-    </div>
-
-    <div class="card highlight">
-      <div class="time">4:00 PM</div>
-      <div class="activity">Massage Appointment</div>
-      <div class="notes">At Spa Central Batam (Baloi) / Tui Na Healthcare</div>
-    </div>
-
-    <div class="card">
-      <div class="time">6:00 PM</div>
-      <div class="activity">Dinner & Relax</div>
-      <div class="notes">Explore Nagoya Hill Food Street</div>
-    </div>
-
-    <div class="card">
-      <div class="time">8:00 PM</div>
-      <div class="activity">Evening Leisure at <a href="https://goo.gl/maps/WNfnq5cN9wJY7gwj7" target="_blank" class="link">Blue Fire Beach Club</a></div>
-      <div class="notes">Chill by the beach, drinks & music</div>
-    </div>
-
-    <h2>📅 Day 2: Sunday, Oct 20</h2>
-
-    <div class="card">
-      <div class="time">8:00 AM</div>
-      <div class="activity">Breakfast at hotel</div>
-      <div class="notes">Start the day fresh</div>
-    </div>
-
-    <div class="card">
-      <div class="time">10:00 AM</div>
-      <div class="activity">Explore or Shopping</div>
-      <div class="notes">Batam Mega Mall or BCS Mall</div>
-    </div>
-
-    <div class="card">
-      <div class="time">12:00 PM</div>
-      <div class="activity">Check-out</div>
-      <div class="notes">Leave luggage if needed</div>
-    </div>
-
-    <div class="card">
-      <div class="time">1:00 PM</div>
-      <div class="activity">Lunch (optional)</div>
-      <div class="notes">Try local food or revisit favorites</div>
-    </div>
-
-    <div class="card">
-      <div class="time">4:45 PM</div>
-      <div class="activity">Ferry back to Singapore</div>
-      <div class="notes">Batam Centre → HarbourFront</div>
-    </div>
-
-    <h2>✅ Reminders</h2>
-    <ul class="reminders">
-      <li>Bring passport (6 months validity)</li>
-      <li>Carry ferry tickets for both ways</li>
-      <li>Have Indonesian Rupiah (IDR) cash or cards ready</li>
-      <li>Arrange mobile data or local SIM card</li>
-      <li>Consider travel insurance</li>
-    </ul>
-
+    <section>
+      <h2 style="color:#3498db; margin-bottom:15px;">Reminders</h2>
+      <ul class="reminders">
+        <li>Passport with at least 6 months validity</li>
+        <li>Ferry tickets (round trip)</li>
+        <li>Indonesian Rupiah (IDR) cash or card</li>
+        <li>Mobile data or local SIM</li>
+        <li>Travel insurance (optional but recommended)</li>
+      </ul>
+    </section>
   </div>
-
 </body>
 </html>
-
