--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
         </div>
         <div class="event">
           <div class="event-time">11:00 AM</div>
-          <div class="event-title">Explore Barelang Bridge</div>
-          <div class="event-details">Iconic landmark, perfect for photos and light sightseeing (~45 min visit).</div>
+          <div class="event-title">Shopping at Nagoya Hill Shopping Mall</div>
+          <div class="event-details">Explore shops, pick up souvenirs, and enjoy local snacks.</div>
         </div>
         <div class="event">
           <div class="event-time">12:00 PM</div>
@@ -200,13 +200,13 @@
         </div>
         <div class="event">
           <div class="event-time">9:00 AM</div>
-          <div class="event-title">Visit Taman Wisata Muka Kuning</div>
-          <div class="event-details">A beautiful waterfront park perfect for morning strolls, local culture, and photo ops.</div>
+          <div class="event-title">Shopping at Nagoya Hill Shopping Mall</div>
+          <div class="event-details">Explore a large mall with a variety of shops, local souvenirs, and food courts.</div>
         </div>
         <div class="event">
-          <div class="event-time">10:30 AM</div>
-          <div class="event-title">Visit Batam Miniature Park (Taman Mini Indonesia Indah Batam)</div>
-          <div class="event-details">Explore Indonesian culture and architecture in miniature. Great for quick cultural immersion.</div>
+          <div class="event-time">11:00 AM</div>
+          <div class="event-title">Visit Welcome To Batam Monument</div>
+          <div class="event-details">Quick stop to snap photos and learn a bit about Batam's history.</div>
         </div>
         <div class="event">
           <div class="event-time">12:00 PM</div>
@@ -220,18 +220,18 @@
         </div>
         <div class="event">
           <div class="event-time">3:00 PM</div>
-          <div class="event-title">Return to Hotel & Pack</div>
-          <div class="event-details">Prepare for check-out and luggage.</div>
+          <div class="event-title">Return to Hotel and pack</div>
+          <div class="event-details">Get ready to check out and head to ferry terminal.</div>
         </div>
         <div class="event">
-          <div class="event-time">3:30 PM</div>
-          <div class="event-title">Head to Batam Centre Ferry Terminal</div>
-          <div class="event-details">Taxi or Grab (~25 min), allow time for immigration.</div>
+          <div class="event-time">3:45 PM</div>
+          <div class="event-title">Check out and leave hotel</div>
+          <div class="event-details">Arrange taxi/ride to Batam Center Ferry Terminal.</div>
         </div>
         <div class="event">
-          <div class="event-time">4:15 PM</div>
-          <div class="event-title">Ferry Departure to Singapore</div>
-          <div class="event-details">Relax on ferry and arrive HarbourFront by ~5:15 PM.</div>
+          <div class="event-time">4:45 PM</div>
+          <div class="event-title">Ferry back to Singapore (HarbourFront)</div>
+          <div class="event-details">Relax on the ferry and enjoy the ride back.</div>
         </div>
       </div>
     </section>
@@ -239,15 +239,14 @@
     <section>
       <h2 style="color:#1a73e8; margin-bottom:15px;">Reminders</h2>
       <ul class="reminders">
-        <li>Passport with at least 6 months validity</li>
-        <li>Ferry tickets (round trip) – keep printed or digital copies handy</li>
-        <li>Indonesian Rupiah (IDR) cash and cards accepted in many places</li>
-        <li>Local SIM or roaming data for navigation and calls</li>
-        <li>Comfortable clothes and swimwear for beach club</li>
-        <li>Travel insurance (recommended)</li>
-        <li>Keep some small change for taxis and street vendors</li>
+        <li>Bring passport and necessary travel documents for immigration.</li>
+        <li>Have some Indonesian Rupiah cash on hand for small purchases.</li>
+        <li>Book taxi/ride in advance for airport transfers to avoid delays.</li>
+        <li>Wear comfortable clothes and shoes suitable for walking and shopping.</li>
+        <li>Carry sunscreen and a hat for outdoor visits.</li>
       </ul>
     </section>
+
   </div>
 </body>
 </html>
