--- a/index.html
+++ b/index.html
@@ -144,28 +144,33 @@
         </div>
         <div class="event">
           <div class="event-time">9:15 AM</div>
-          <div class="event-title">Arrival and Immigration</div>
+          <div class="event-title">Arrival and Immigration at Batam Centre</div>
           <div class="event-details">Clear immigration, purchase local SIM if desired.</div>
         </div>
         <div class="event">
           <div class="event-time">9:45 AM</div>
+          <div class="event-title">Drop luggage at iHotel Batam</div>
+          <div class="event-details">Head to the hotel to drop off bags and freshen up before heading out.</div>
+        </div>
+        <div class="event">
+          <div class="event-time">10:15 AM</div>
           <div class="event-title">Visit Maha Vihara Duta Maitreya Buddhist Temple</div>
           <div class="event-details">Explore one of the largest Buddhist temples in Southeast Asia. Peaceful gardens and beautiful statues.</div>
         </div>
         <div class="event">
-          <div class="event-time">11:00 AM</div>
+          <div class="event-time">11:45 AM</div>
           <div class="event-title">Shopping at Nagoya Hill Shopping Mall</div>
           <div class="event-details">Explore shops, pick up souvenirs, and enjoy local snacks.</div>
         </div>
         <div class="event">
-          <div class="event-time">12:00 PM</div>
+          <div class="event-time">12:45 PM</div>
           <div class="event-title">Lunch at <a href="https://goo.gl/maps/h6xR5mWi98kTAzJdA" target="_blank" class="link">Sop Ikan 96</a></div>
           <div class="event-details">Try the signature fish soup and other local dishes.</div>
         </div>
         <div class="event">
-          <div class="event-time">1:30 PM</div>
+          <div class="event-time">2:00 PM</div>
           <div class="event-title">Check in at iHotel Batam</div>
-          <div class="event-details">Unpack, freshen up, and rest before afternoon plans.</div>
+          <div class="event-details">Complete check-in process, unpack, and rest.</div>
         </div>
         <div class="event">
           <div class="event-time">3:30 PM</div>
