--- a/index.html
+++ b/index.html
@@ -1,120 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Batam Trip Itinerary - Oct 19–20, 2025</title>
-<style>
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background: #eef5f9;
-    color: #333;
-    margin: 0;
-    padding: 20px;
-  }
-  .container {
-    max-width: 650px;
-    margin: 0 auto;
-    background: white;
-    border-radius: 10px;
-    padding: 30px 30px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-  }
-  h1 {
-    text-align: center;
-    color: #1a73e8;
-    margin-bottom: 8px;
-  }
-  p.subtitle {
-    text-align: center;
-    color: #5a5a5a;
-    margin-top: 0;
-    margin-bottom: 30px;
-    font-weight: 500;
-  }
-  section {
-    margin-bottom: 40px;
-  }
-  .hotel-card {
-    background: #27ae60;
-    color: white;
-    padding: 20px 25px;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(39,174,96,0.4);
-  }
-  .hotel-card p {
-    margin: 5px 0;
-    font-weight: 600;
-  }
-  .timeline {
-    position: relative;
-    padding-left: 30px;
-    border-left: 4px solid #1a73e8;
-  }
-  .event {
-    position: relative;
-    margin-bottom: 28px;
-    padding-left: 20px;
-  }
-  .event:last-child {
-    margin-bottom: 0;
-  }
-  .event::before {
-    content: "";
-    position: absolute;
-    left: -15px;
-    top: 7px;
-    width: 20px;
-    height: 20px;
-    background: #1a73e8;
-    border-radius: 50%;
-    border: 3px solid white;
-    box-shadow: 0 0 8px rgba(26,115,232,0.7);
-  }
-  .event-time {
-    font-weight: 700;
-    color: #1a73e8;
-    font-size: 1.05rem;
-    margin-bottom: 6px;
-  }
-  .event-title {
-    font-weight: 600;
-    font-size: 1.15rem;
-    margin-bottom: 6px;
-  }
-  .event-details {
-    font-size: 0.95rem;
-    color: #444;
-    line-height: 1.5;
-  }
-  a.link {
-    color: #1a73e8;
-    text-decoration: none;
-    font-weight: 600;
-  }
-  a.link:hover {
-    text-decoration: underline;
-  }
-  ul.reminders {
-    padding-left: 20px;
-    color: #34495e;
-  }
-  ul.reminders li {
-    margin-bottom: 12px;
-    font-weight: 500;
-  }
-  @media (max-width: 480px) {
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Batam Trip Itinerary - Oct 19–20, 2025</title>
+  <style>
+    * { box-sizing: border-box; }
+    body {
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      background: #eef5f9;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
     .container {
-      padding: 20px 15px;
+      max-width: 700px;
+      margin: 0 auto;
+      background: white;
+      border-radius: 10px;
+      padding: 30px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
-    .event-time, .event-title {
-      font-size: 1rem;
+    h1 {
+      text-align: center;
+      color: #1a73e8;
+      margin-bottom: 8px;
     }
-  }
-</style>
+    p.subtitle {
+      text-align: center;
+      color: #5a5a5a;
+      margin-top: 0;
+      margin-bottom: 30px;
+      font-weight: 500;
+    }
+    section { margin-bottom: 40px; }
+    .hotel-card {
+      background: #2d6a4f;
+      color: white;
+      padding: 20px 25px;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+    .hotel-card p {
+      margin: 5px 0;
+      font-weight: 600;
+    }
+    .timeline {
+      position: relative;
+      padding-left: 30px;
+      border-left: 4px solid #1a73e8;
+    }
+    .event {
+      position: relative;
+      margin-bottom: 28px;
+      padding-left: 20px;
+    }
+    .event:last-child { margin-bottom: 0; }
+    .event::before {
+      content: "";
+      position: absolute;
+      left: -15px;
+      top: 7px;
+      width: 20px;
+      height: 20px;
+      background: #1a73e8;
+      border-radius: 50%;
+      border: 3px solid white;
+      box-shadow: 0 0 8px rgba(26,115,232,0.6);
+    }
+    .event-time {
+      font-weight: 700;
+      color: #1a73e8;
+      font-size: 1.05rem;
+      margin-bottom: 6px;
+    }
+    .event-title {
+      font-weight: 600;
+      font-size: 1.15rem;
+      margin-bottom: 6px;
+    }
+    .event-details {
+      font-size: 0.95rem;
+      color: #444;
+      line-height: 1.5;
+    }
+    a.link {
+      color: #1a73e8;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a.link:hover { text-decoration: underline; }
+    ul.reminders {
+      padding-left: 20px;
+      color: #34495e;
+    }
+    ul.reminders li {
+      margin-bottom: 12px;
+      font-weight: 500;
+    }
+    @media (max-width: 480px) {
+      .container { padding: 20px 15px; }
+      .event-time, .event-title { font-size: 1rem; }
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -123,8 +111,8 @@
 
     <section>
       <div class="hotel-card">
-        <p>🏨 <strong>iHotel Batam</strong></p>
-        <p>Jl. Teuku Umar, Lubuk Baja Kota, Kec. Lubuk Baja, Kota Batam</p>
+        <p>🏨 <strong>iHotel Baloi</strong></p>
+        <p>Komplek Baloi Kusuma Indah No.7, Lubuk Baja, Batam</p>
         <p>Check-in: Oct 19, 2:00 PM | Check-out: Oct 20, 12:00 PM</p>
       </div>
     </section>
@@ -134,63 +122,63 @@
       <div class="timeline">
         <div class="event">
           <div class="event-time">6:30 AM</div>
-          <div class="event-title">Leave for HarbourFront Ferry Terminal (Singapore)</div>
-          <div class="event-details">Ensure to arrive at terminal by 7:30 AM for check-in.</div>
+          <div class="event-title">Leave for HarbourFront Ferry Terminal</div>
+          <div class="event-details">Arrive early to check in for the ferry.</div>
         </div>
         <div class="event">
           <div class="event-time">8:10 AM</div>
-          <div class="event-title">Ferry to Batam Centre</div>
-          <div class="event-details">Enjoy the scenic 1-hour ferry crossing.</div>
+          <div class="event-title">Ferry to Batam Center</div>
+          <div class="event-details">1-hour ferry ride to Batam.</div>
         </div>
         <div class="event">
           <div class="event-time">9:15 AM</div>
-          <div class="event-title">Arrival and Immigration at Batam Centre</div>
-          <div class="event-details">Clear immigration, purchase local SIM if desired.</div>
+          <div class="event-title">Immigration Clearance</div>
+          <div class="event-details">Proceed through Batam immigration.</div>
         </div>
         <div class="event">
           <div class="event-time">9:45 AM</div>
-          <div class="event-title">Drop luggage at iHotel Batam</div>
-          <div class="event-details">Head to the hotel to drop off bags and freshen up before heading out.</div>
+          <div class="event-title">Drop Luggage at iHotel Baloi</div>
+          <div class="event-details">Leave bags at hotel concierge before check-in time.</div>
         </div>
         <div class="event">
           <div class="event-time">10:15 AM</div>
-          <div class="event-title">Visit Maha Vihara Duta Maitreya Buddhist Temple</div>
-          <div class="event-details">Explore one of the largest Buddhist temples in Southeast Asia. Peaceful gardens and beautiful statues.</div>
+          <div class="event-title">Visit Maha Vihara Duta Maitreya Temple</div>
+          <div class="event-details">Peaceful Buddhist temple with large Buddha statues.</div>
         </div>
         <div class="event">
           <div class="event-time">11:45 AM</div>
-          <div class="event-title">Shopping at Nagoya Hill Shopping Mall</div>
-          <div class="event-details">Explore shops, pick up souvenirs, and enjoy local snacks.</div>
+          <div class="event-title">Shopping at Grand Batam Mall</div>
+          <div class="event-details">Modern mall with cafes, fashion, and electronics.</div>
         </div>
         <div class="event">
           <div class="event-time">12:45 PM</div>
-          <div class="event-title">Lunch at <a href="https://goo.gl/maps/h6xR5mWi98kTAzJdA" target="_blank" class="link">Sop Ikan 96</a></div>
-          <div class="event-details">Try the signature fish soup and other local dishes.</div>
+          <div class="event-title">Lunch at Sop Ikan 96</div>
+          <div class="event-details">Popular Batam-style fish soup. Light, tasty, and spicy.</div>
         </div>
         <div class="event">
           <div class="event-time">2:00 PM</div>
-          <div class="event-title">Check in at iHotel Batam</div>
-          <div class="event-details">Complete check-in process, unpack, and rest.</div>
+          <div class="event-title">Check in to iHotel Baloi</div>
+          <div class="event-details">Rest, refresh, and recharge in your room.</div>
         </div>
         <div class="event">
           <div class="event-time">3:30 PM</div>
           <div class="event-title">Massage at Spa Central (Baloi)</div>
-          <div class="event-details">Relax with your booked Tui Na treatment or other massages.</div>
+          <div class="event-details">Your pre-booked Tui Na massage to unwind.</div>
         </div>
         <div class="event">
           <div class="event-time">5:00 PM</div>
-          <div class="event-title">Visit <a href="https://goo.gl/maps/WNfnq5cN9wJY7gwj7" target="_blank" class="link">Blue Fire Beach Club</a></div>
-          <div class="event-details">Enjoy sunset drinks, beach vibes, and live music.</div>
+          <div class="event-title">Blue Fire Beach Club</div>
+          <div class="event-details">Relax at a beach club with drinks and music by the sea.</div>
         </div>
         <div class="event">
           <div class="event-time">7:30 PM</div>
-          <div class="event-title">Dinner at Nagoya Hill Food Street</div>
-          <div class="event-details">Try local street food or seafood specialties.</div>
+          <div class="event-title">Dinner at Nagoya Food Street</div>
+          <div class="event-details">Choose from a variety of local grilled dishes and seafood.</div>
         </div>
         <div class="event">
           <div class="event-time">9:00 PM</div>
-          <div class="event-title">Return to Hotel and Rest</div>
-          <div class="event-details">Relax and recharge for next day.</div>
+          <div class="event-title">Return to Hotel & Rest</div>
+          <div class="event-details">End of Day 1. Good night!</div>
         </div>
       </div>
     </section>
@@ -200,43 +188,48 @@
       <div class="timeline">
         <div class="event">
           <div class="event-time">7:30 AM</div>
-          <div class="event-title">Wake Up & Breakfast at Hotel</div>
-          <div class="event-details">Enjoy a leisurely morning meal.</div>
+          <div class="event-title">Breakfast at Hotel</div>
+          <div class="event-details">Enjoy the hotel buffet or local options nearby.</div>
         </div>
         <div class="event">
           <div class="event-time">9:00 AM</div>
-          <div class="event-title">Shopping at Nagoya Hill Shopping Mall</div>
-          <div class="event-details">Explore a large mall with a variety of shops, local souvenirs, and food courts.</div>
+          <div class="event-title">Check out & Leave Luggage at Concierge</div>
+          <div class="event-details">Store bags at the hotel front desk.</div>
+        </div>
+        <div class="event">
+          <div class="event-time">9:30 AM</div>
+          <div class="event-title">Explore BCS Mall</div>
+          <div class="event-details">Bargain shopping and snack hunting at Batam City Square.</div>
         </div>
         <div class="event">
           <div class="event-time">11:00 AM</div>
-          <div class="event-title">Visit Welcome To Batam Monument</div>
-          <div class="event-details">Quick stop to snap photos and learn a bit about Batam's history.</div>
+          <div class="event-title">Visit Grand Batam Mall</div>
+          <div class="event-details">Pick up any last-minute items from popular stores.</div>
         </div>
         <div class="event">
-          <div class="event-time">12:00 PM</div>
-          <div class="event-title">Lunch at local café near hotel</div>
-          <div class="event-details">Try local specialties or light bites.</div>
+          <div class="event-time">12:30 PM</div>
+          <div class="event-title">Lunch at Local Café</div>
+          <div class="event-details">Relax before your final sightseeing stop.</div>
         </div>
         <div class="event">
           <div class="event-time">1:30 PM</div>
-          <div class="event-title">Visit Mega Wisata Ocarina Batam Theme Park</div>
-          <div class="event-details">Enjoy some fun rides, beach views, and photo spots (if time allows).</div>
+          <div class="event-title">Mega Wisata Ocarina Batam</div>
+          <div class="event-details">Take photos and enjoy the sea breeze at this coastal park.</div>
         </div>
         <div class="event">
-          <div class="event-time">3:00 PM</div>
-          <div class="event-title">Return to Hotel and pack</div>
-          <div class="event-details">Get ready to check out and head to ferry terminal.</div>
+          <div class="event-time">3:15 PM</div>
+          <div class="event-title">Collect Luggage from Hotel</div>
+          <div class="event-details">Return to iHotel Baloi for your bags.</div>
         </div>
         <div class="event">
           <div class="event-time">3:45 PM</div>
-          <div class="event-title">Check out and leave hotel</div>
-          <div class="event-details">Arrange taxi/ride to Batam Center Ferry Terminal.</div>
+          <div class="event-title">Depart for Batam Center Ferry Terminal</div>
+          <div class="event-details">Ensure arrival by 4:15 PM for boarding.</div>
         </div>
         <div class="event">
           <div class="event-time">4:45 PM</div>
-          <div class="event-title">Ferry back to Singapore (HarbourFront)</div>
-          <div class="event-details">Relax on the ferry and enjoy the ride back.</div>
+          <div class="event-title">Ferry to Singapore</div>
+          <div class="event-details">Return to HarbourFront via ferry.</div>
         </div>
       </div>
     </section>
@@ -244,11 +237,11 @@
     <section>
       <h2 style="color:#1a73e8; margin-bottom:15px;">Reminders</h2>
       <ul class="reminders">
-        <li>Bring passport and necessary travel documents for immigration.</li>
-        <li>Have some Indonesian Rupiah cash on hand for small purchases.</li>
-        <li>Book taxi/ride in advance for airport transfers to avoid delays.</li>
-        <li>Wear comfortable clothes and shoes suitable for walking and shopping.</li>
-        <li>Carry sunscreen and a hat for outdoor visits.</li>
+        <li>Bring passport and printed ferry tickets.</li>
+        <li>Have IDR cash and working SIM card if needed.</li>
+        <li>Use Grab or Gojek for local rides.</li>
+        <li>Keep track of time to avoid missing the ferry.</li>
+        <li>Pack lightly for convenience at malls and beaches.</li>
       </ul>
     </section>
 
