--- a/index.html
+++ b/index.html
@@ -142,11 +142,6 @@
         </div>
         <div class="event">
           <div class="event-time">10:15 AM</div>
-          <div class="event-title">Visit Maha Vihara Duta Maitreya Temple</div>
-          <div class="event-details">Peaceful Buddhist temple with large Buddha statues.</div>
-        </div>
-        <div class="event">
-          <div class="event-time">11:45 AM</div>
           <div class="event-title">Shopping at Grand Batam Mall</div>
           <div class="event-details">Modern mall with cafes, fashion, and electronics.</div>
         </div>
@@ -172,8 +167,8 @@
         </div>
         <div class="event">
           <div class="event-time">7:30 PM</div>
-          <div class="event-title">Dinner at Nagoya Food Street</div>
-          <div class="event-details">Choose from a variety of local grilled dishes and seafood.</div>
+          <div class="event-title">Dinner at Love Seafood Batam</div>
+          <div class="event-details">Enjoy fresh seafood in a cozy, scenic waterfront setting.</div>
         </div>
         <div class="event">
           <div class="event-time">9:00 PM</div>
