--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </section>
 
     <section>
-      <h2 style="color:#1a73e8; margin-bottom:15px;">Day 1 - Saturday, Oct 19</h2>
+      <h2 style="color:#1a73e8; margin-bottom:15px;">Day 1 - Sunday, Oct 19</h2>
       <div class="timeline">
         <div class="event">
           <div class="event-time">6:30 AM</div>
@@ -131,47 +131,47 @@
           <div class="event-details">1-hour ferry ride to Batam.</div>
         </div>
         <div class="event">
-          <div class="event-time">9:15 AM</div>
+          <div class="event-time">8:15 AM</div>
           <div class="event-title">Immigration Clearance</div>
           <div class="event-details">Proceed through Batam immigration.</div>
         </div>
         <div class="event">
-          <div class="event-time">9:45 AM</div>
+          <div class="event-time">8:45 AM</div>
           <div class="event-title">Drop Luggage at iHotel Baloi</div>
           <div class="event-details">Leave bags at hotel concierge before check-in time.</div>
         </div>
         <div class="event">
-          <div class="event-time">10:15 AM</div>
-          <div class="event-title">Shopping at Grand Batam Mall</div>
-          <div class="event-details">Modern mall with cafes, fashion, and electronics.</div>
+          <div class="event-time">10:00 AM</div>
+          <div class="event-title">Massage at Spa Central (Baloi) / tui na healthcare batam</div>
+          <div class="event-details">pre-booked massage</div>
         </div>
         <div class="event">
-          <div class="event-time">12:45 PM</div>
+          <div class="event-time">12:30 PM</div>
           <div class="event-title">Lunch at Sop Ikan 96</div>
           <div class="event-details">Popular Batam-style fish soup. Light, tasty, and spicy.</div>
         </div>
         <div class="event">
-          <div class="event-time">2:00 PM</div>
+          <div class="event-time">2:00-4:30 PM</div>
+          <div class="event-title">Go BCS / Grand Batam Mall / Go Kart</div>
+          <div class="event-details">BCS to book hair appointment / Grand Batam Mall to do facial, etc</div>
+        </div>
+        <div class="event">
+          <div class="event-time">5:00 PM</div>
           <div class="event-title">Check in to iHotel Baloi</div>
           <div class="event-details">Rest, refresh, and recharge in your room.</div>
         </div>
         <div class="event">
-          <div class="event-time">3:30 PM</div>
-          <div class="event-title">Massage at Spa Central (Baloi)</div>
-          <div class="event-details">Your pre-booked Tui Na massage to unwind.</div>
-        </div>
-        <div class="event">
-          <div class="event-time">5:00 PM</div>
-          <div class="event-title">Blue Fire Beach Club</div>
-          <div class="event-details">Relax at a beach club with drinks and music by the sea.</div>
-        </div>
-        <div class="event">
-          <div class="event-time">7:30 PM</div>
+          <div class="event-time">6:00 PM</div>
           <div class="event-title">Dinner at Love Seafood Batam</div>
           <div class="event-details">Enjoy fresh seafood in a cozy, scenic waterfront setting.</div>
         </div>
         <div class="event">
-          <div class="event-time">9:00 PM</div>
+          <div class="event-time">7:00 PM</div>
+          <div class="event-title">Blue Fire Beach Club</div>
+          <div class="event-details">Relax at a beach club with drinks and music by the sea.</div>
+        </div>
+        <div class="event">
+          <div class="event-time">10:00 PM</div>
           <div class="event-title">Return to Hotel & Rest</div>
           <div class="event-details">End of Day 1. Good night!</div>
         </div>
@@ -179,7 +179,7 @@
     </section>
 
     <section>
-      <h2 style="color:#1a73e8; margin-bottom:15px;">Day 2 - Sunday, Oct 20</h2>
+      <h2 style="color:#1a73e8; margin-bottom:15px;">Day 2 - Monday, Oct 20</h2>
       <div class="timeline">
         <div class="event">
           <div class="event-time">7:30 AM</div>
@@ -192,14 +192,9 @@
           <div class="event-details">Store bags at the hotel front desk.</div>
         </div>
         <div class="event">
-          <div class="event-time">9:30 AM</div>
-          <div class="event-title">Explore BCS Mall</div>
+          <div class="event-time">09:00 AM</div>
+          <div class="event-title">can go places nearby / Explore BCS Mall</div>
           <div class="event-details">Bargain shopping and snack hunting at Batam City Square.</div>
-        </div>
-        <div class="event">
-          <div class="event-time">11:00 AM</div>
-          <div class="event-title">Visit Grand Batam Mall</div>
-          <div class="event-details">Pick up any last-minute items from popular stores.</div>
         </div>
         <div class="event">
           <div class="event-time">12:30 PM</div>
@@ -207,9 +202,9 @@
           <div class="event-details">Relax before your final sightseeing stop.</div>
         </div>
         <div class="event">
-          <div class="event-time">1:30 PM</div>
-          <div class="event-title">Mega Wisata Ocarina Batam</div>
-          <div class="event-details">Take photos and enjoy the sea breeze at this coastal park.</div>
+          <div class="event-time">12:30 PM</div>
+          <div class="event-title">Visit Grand Batam Mall</div>
+          <div class="event-details">Pick up any last-minute items from popular stores.</div>
         </div>
         <div class="event">
           <div class="event-time">3:15 PM</div>
@@ -243,3 +238,4 @@
   </div>
 </body>
 </html>
+
