--- a/index.html
+++ b/index.html
@@ -198,13 +198,8 @@
         </div>
         <div class="event">
           <div class="event-time">12:30 PM</div>
-          <div class="event-title">Lunch at Local Café</div>
+          <div class="event-title">Lunch at Malaya Café</div>
           <div class="event-details">Relax before your final sightseeing stop.</div>
-        </div>
-        <div class="event">
-          <div class="event-time">12:30 PM</div>
-          <div class="event-title">Visit Grand Batam Mall</div>
-          <div class="event-details">Pick up any last-minute items from popular stores.</div>
         </div>
         <div class="event">
           <div class="event-time">3:15 PM</div>
@@ -238,4 +233,5 @@
   </div>
 </body>
 </html>
+
 
