--- a/index.html
+++ b/index.html
@@ -187,19 +187,24 @@
           <div class="event-details">Enjoy the hotel buffet or local options nearby.</div>
         </div>
         <div class="event">
-          <div class="event-time">9:00 AM</div>
-          <div class="event-title">Check out & Leave Luggage at Concierge</div>
-          <div class="event-details">Store bags at the hotel front desk.</div>
+          <div class="event-time">9:00-11:30 AM</div>
+          <div class="event-title">OTOT time</div>
+          <div class="event-details">Massage / Hair or nail/ Nagoya Hill area/ chill at Common Space Coffee & Bar</div>
         </div>
         <div class="event">
-          <div class="event-time">09:15 AM</div>
-          <div class="event-title">can go places nearby / Explore BCS Mall</div>
-          <div class="event-details">Bargain shopping and snack hunting at Batam City Square.</div>
+        <div class="event-time">11:30-12:00 AM</div>
+        <div class="event-title">Check out & Leave Luggage at Concierge</div>
+        <div class="event-details">Store bags at the hotel front desk.</div>
         </div>
         <div class="event">
-          <div class="event-time">12:30 PM</div>
-          <div class="event-title">Lunch at Malaya Café</div>
+          <div class="event-time">12:30-2:00 PM</div>
+          <div class="event-title">Lunch at Restoran Hongti Seafood</div>
           <div class="event-details">Relax before your final sightseeing stop.</div>
+        </div>
+        <div class="event">
+          <div class="event-time">2:00-3:00 PM</div>
+          <div class="event-title">Go to Bird Nest shop</div>
+          <div class="event-details">Chill and enjoy bird nest</div>
         </div>
         <div class="event">
           <div class="event-time">3:15 PM</div>
@@ -212,7 +217,7 @@
           <div class="event-details">Ensure arrival by 4:15 PM for boarding.</div>
         </div>
         <div class="event">
-          <div class="event-time">4:45 PM</div>
+          <div class="event-time">5:45 PM</div>
           <div class="event-title">Ferry to Singapore</div>
           <div class="event-details">Return to HarbourFront via ferry.</div>
         </div>
@@ -233,6 +238,7 @@
   </div>
 </body>
 </html>
+
 
 
 
