--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
           <div class="event-details">Leave bags at hotel concierge before check-in time.</div>
         </div>
         <div class="event">
-          <div class="event-time">10:00 AM</div>
-          <div class="event-title">Massage at Spa Central (Baloi) / tui na healthcare batam</div>
+          <div class="event-time">10:00-12:00 AM</div>
+          <div class="event-title">Massage at Spa Central (Baloi)</div>
           <div class="event-details">pre-booked massage</div>
         </div>
         <div class="event">
